@@ -1,5 +1,5 @@
 Obsoletes: pupmod-svckill-test >= 0.0.1
-Requires: pupmod-simp-simpcat < 6.0.0-0
-Requires: pupmod-simp-simpcat >= 5.0.1-0
-Requires: pupmod-simp-simplib < 2.0.0-0
-Requires: pupmod-simp-simplib >= 1.3.1-0
+Requires: pupmod-simp-simpcat < 7.0.0-0
+Requires: pupmod-simp-simpcat >= 6.0.0-0
+Requires: pupmod-simp-simplib < 3.0.0-0
+Requires: pupmod-simp-simplib >= 2.0.0-0
