@@ -1,6 +1,6 @@
 {
   "name": "simp-svckill",
-  "version": "1.1.4",
+  "version": "2.0.0",
   "author": "simp",
   "summary": "Disables all services that are not controlled by Puppet.",
   "license": "Apache-2.0",
@@ -14,11 +14,11 @@
   "dependencies": [
     {
       "name": "simp/simpcat",
-      "version_requirement": ">= 5.0.1 < 6.0.0"
+      "version_requirement": ">= 6.0.0 < 7.0.0"
     },
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 1.3.1 < 2.0.0"
+      "version_requirement": ">= 2.0.0 < 3.0.0"
     }
   ],
   "operatingsystem_support": [
